--- a/index.html
+++ b/index.html
@@ -85,21 +85,21 @@
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
-								<h3><a href="#">Webinars</a></h3>
+								<h3><a>Webinars</a></h3>
 								<p>Presentaciones de soluciones TI.</p>
 							</article>
 						</div>
 						<div class="col-4 col-7-medium col-12-small">
 							<article class="box style2">
 								<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
-								<h3><a href="#">Capacitaciones</a></h3>
+								<h3><a>Capacitaciones</a></h3>
 								<p>Sesiones individuales de soluciones TI.</p>
 							</article>
 						</div>
 						<div class="col-4 col-7-medium col-12-small">
 							<article class="box style2">
 								<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
-								<h3><a href="#">Cotizaciones</a></h3>
+								<h3><a>Cotizaciones</a></h3>
 								<p>Labor de ventas en licenciamientos.</p>
 								
 							</article>
@@ -107,21 +107,21 @@
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
-								<h3><a href="#">Acompañamiento</a></h3>
+								<h3><a>Acompañamiento</a></h3>
 								<p>Apoyo tecnico y presencial para finalizaciones de proyecto.</p>
 							</article>
 						</div>
 						<div class="col-4 col-7-medium col-12-small">
 							<article class="box style2">
 								<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
-								<h3><a href="#">Creacion de laboratorios</a></h3>
+								<h3><a>Creacion de laboratorios</a></h3>
 								<p>Elaboraciones de labortarios para explicaciones y capacitaciones.</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
-								<h3><a href="#">Consultoria</a></h3>
+								<h3><a>Consultoria</a></h3>
 								<p>Explicaciones y aclaraciones de temas TI.</p>
 							</article>
 						</div>
@@ -191,7 +191,7 @@
 					</div>
 					<footer>
 						<ul id="copyright">
-							<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">Kevin Oliver Camacho Paz</a></li>
+							<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="https://kevincamachopaz.github.io/MiSitioWeb/">Kevin Oliver Camacho Paz</a></li>
 						</ul>
 					</footer>
 				</div>
