--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
 						</div>
 						<div class="col-8 col-7-large col-12-medium">
 							<header>
+								<video src= "video.mp4"autoplay
+								 loop muted preload></video>
 								<h1>Hola, bienvenido a mi sitio web. <p></p> <strong> Presales Engineer. </strong><h1>Kevin Oliver Camacho Paz.</h1>
 							</header>
 							<p>Este es mi <strong>Respositorio</strong>, aqui podras encontrar todo lo referente a mi curriculum laboral como mi <a href="https://drive.google.com/uc?id=1QpQPHV-iwTz_AsHkoAp1noTq4ChFibD6&export=download">CV</a> mis <a href="https://www.linkedin.com/in/kevin-oliver-camacho-paz/">Certificaciones</a> &amp; mis contactos</a>.</p>
