--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 						</div>
 						<div class="col-8 col-7-large col-12-medium">
 							<header>
-								<video src= "video.mp4"autoplay
+								<video src= "images/video.mp4"autoplay
 								 loop muted preload></video>
 								<h3>Hola, bienvenido a mi sitio web. <p></p> <strong> Presales Engineer. </strong><h1>Kevin Oliver Camacho Paz.</h3>
 							</header>
