--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 						</div>
 						<div class="col-8 col-7-large col-12-medium">
 							<header>
-								<h1>Hola, bienvenido a mi sitio web. <p></p> <strong> Presales Engineer. </strong><h1>Kevin Oliver Camacho Paz.</h1>
+								<h1>Hola, bienvenido a mi sitio web. <p></p> <strong> IT Specialist. </strong><h1>Kevin Oliver Camacho Paz.</h1>
 							</header>
 							<p>Este es mi <strong>Respositorio</strong>, aqui podras encontrar todo lo referente a mi curriculum laboral como mi <a href="https://drive.google.com/uc?id=1QpQPHV-iwTz_AsHkoAp1noTq4ChFibD6&export=download">CV</a> mis <a href="https://www.linkedin.com/in/kevin-oliver-camacho-paz/">Certificaciones</a> &amp; mis contactos</a>.</p>
 							<a href="#work" class="button large scrolly">Learn about what I do</a>
