--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE HTML>
--->
 <html>
 	<head>
 		<title>MiSitioWeb</title>
@@ -14,8 +13,8 @@
 				<ul class="container">
 					<li><a href="#top">CV</a></li>
 					<li><a href="#work">Skills</a></li>
-					<li><a href="#portfolio">Actividades</a></li>
-					<li><a href="#contact">Contactos</a></li>
+					<li><a href="#portfolio">Activities</a></li>
+					<li><a href="#contact">Contacts</a></li>
 				</ul>
 			</nav>
 
@@ -28,9 +27,9 @@
 						</div>
 						<div class="col-8 col-7-large col-12-medium">
 							<header>
-								<h1>Hola, bienvenido a mi sitio web. <p></p> <strong> IT Specialist. </strong><h1>Kevin Oliver Camacho Paz.</h1>
+								<h1>Hi, welcome to my website. <br><br><br><strong> IT Specialist. </strong><h1>Kevin Oliver Camacho Paz.</h1>
 							</header>
-							<p>Este es mi <strong>Respositorio</strong>, aqui podras encontrar todo lo referente a mi curriculum laboral como mi <a href="https://drive.google.com/uc?id=1QpQPHV-iwTz_AsHkoAp1noTq4ChFibD6&export=download">CV</a> mis <a href="https://www.linkedin.com/in/kevin-oliver-camacho-paz/">Certificaciones</a> &amp; mis contactos</a>.</p>
+							<p>This is my <strong>respository</strong>, here you can find everything related to my work curriculum such as my <a href="https://drive.google.com/uc?id=1QpQPHV-iwTz_AsHkoAp1noTq4ChFibD6&export=download">CV</a> mis <a href="https://www.linkedin.com/in/kevin-oliver-camacho-paz/">certifications</a> &amp; my contacts.</a>.</p>
 							<a href="#work" class="button large scrolly">Learn about what I do</a>
 						</div>
 					</div>
@@ -41,35 +40,35 @@
 			<article id="work" class="wrapper style2">
 				<div class="container">
 					<header>
-						<h2>Algunas skills que manejo.</h2>
-						<p>Consultoria TI en temas relacionados como: </p>
+						<h2>Some skills that I manage.</h2>
+						<p>IT consulting on related topics such as: </p>
 					</header>
 					<div class="row aln-center">
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
 								<i class='fab fa-microsoft fa-2x'>AZURE</i><br/>
 								<h3>Microsoft Azure</h3>
-								<p>Conocimiento en entornos clouds.</p>
+								<p>Knowledge in cloud environments.<br></p>
 								<p> </p>
 							</section>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
-								<i class='fas fa-bug' style='font-size:46px'></i>
-								<h3>Ciberseguridad</h3>
-								<p>Conocimiento en proteccion ante ciber ataques.</p>
+								<i class='fas fa-bug' style='font-size:31px'></i>
+								<h3>Cibersecurity</h3>
+								<p>Knowledge of protection against cyber attacks.</p>
 							</section>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
-								<i class='fas fa-satellite-dish fa-2x'>REDES</i><br/>
-								<h3>Protocolos de redes</h3>
-								<p>Conocimiento en configuraciones de redes.</p>
+								<i class='fas fa-satellite-dish fa-2x'> NETWORKS </i><br/>
+								<h3>Network protocols</h3>
+								<p>Knowledge of network configurations.<br><br></p>
 							</section>
 						</div>
 					</div>
 					<footer>
-						<p>Para mayor detalle consulta mi perfil de LinkendIn</p>
+						<p>For more details see my LinkendIn profile</p>
 						<a href="#portfolio" class="button large scrolly">See some of my recent work</a>
 					</footer>
 				</div>
@@ -80,50 +79,50 @@
 				<div class="container">
 					<header>
 						<h2>Here’s some stuff I do.</h2>
-						<p>Actividades que mas realizo y que mas disfruto hacer.</p>
+						<p>with experience in:</p>
 					</header>
 					<div class="row">
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
 								<h3><a>Webinars</a></h3>
-								<p>Presentaciones de soluciones TI.</p>
+								<p>Presentations of IT solutions.<br><p>
 							</article>
 						</div>
 						<div class="col-4 col-7-medium col-12-small">
 							<article class="box style2">
 								<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
-								<h3><a>Capacitaciones</a></h3>
-								<p>Sesiones individuales de soluciones TI.</p>
+								<h3><a>Trainings</a></h3>
+								<p>Individual IT solutions sessions.<br><br></p>
 							</article>
 						</div>
 						<div class="col-4 col-7-medium col-12-small">
 							<article class="box style2">
 								<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
-								<h3><a>Cotizaciones</a></h3>
-								<p>Labor de ventas en licenciamientos.</p>
+								<h3><a>Project management</a></h3>
+								<p>Survey of requirements and development.</p>
 								
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
-								<h3><a>Acompañamiento</a></h3>
-								<p>Apoyo tecnico y presencial para finalizaciones de proyecto.</p>
+								<h3><a>Accompaniment</a></h3>
+								<p>Technical and face-to-face support for project completion.<br><br></p>
 							</article>
 						</div>
 						<div class="col-4 col-7-medium col-12-small">
 							<article class="box style2">
 								<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
-								<h3><a>Creacion de laboratorios</a></h3>
-								<p>Elaboraciones de labortarios para explicaciones y capacitaciones.</p>
+								<h3><a>Creation of laboratories</a></h3>
+								<p>Laboratories elaborations for explanations and training.</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
-								<h3><a>Consultoria</a></h3>
-								<p>Explicaciones y aclaraciones de temas TI.</p>
+								<h3><a>Consultancy</a></h3>
+								<p>Resolution and clarification of IT issues.<br><br></p>
 							</article>
 						</div>
 					</div>
@@ -139,7 +138,7 @@
 				<div class="container medium">
 					<header>
 						<h2>Send me your doubts.</h2>
-						<p>Para mayor rapidez contactame por mis sitios oficiales.</p>
+						<p>My contact points:</p>
 					</header>
 					<div class="row">
 						<div class="col-12">
@@ -199,12 +198,14 @@
 			</article>
 
 		<!-- Scripts -->
+			<div class="snackbars" id="form-output-global"></div>
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.scrolly.min.js"></script>
 			<script src="assets/js/browser.min.js"></script>
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
-
+    		<script src="js/core.min.js"></script>
+    		<script src="js/script.js"></script>
 	</body>
 </html>
