--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 					</header>
 					<div class="row">
 						<div class="col-12">
-							<form method="post" action="#">
+							<form action="https://formsubmit.co/k3v1n.camacho@gmail.com" method="POST">
 								<div class="row">
 									<div class="col-6 col-12-small">
 										<input type="text" name="name" id="name" placeholder="Name" />
