--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-4 col-5-large col-12-medium">
-							<span class="image fit"><img src="images/mifoto.jpeg" alt="" /></span>
+							<span class="image fit"><img src="images/PERFIL.png" alt="" /></span>
 						</div>
 						<div class="col-8 col-7-large col-12-medium">
 							<header>
@@ -46,24 +46,23 @@
 					<div class="row aln-center">
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
-								<i class='fab fa-microsoft fa-2x'>AZURE</i><br/>
+								<i class='fab fa-microsoft fa-2x'> AZURE </i>
 								<h3>Microsoft Azure</h3>
-								<p>Knowledge in cloud environments.<br></p>
-								<p> </p>
+								<p>Knowledge in cloud environments.</p><p></p>
 							</section>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
-								<i class='fas fa-bug' style='font-size:31px'></i>
+								<i class='fas fa-bug fa-2x'></i>
 								<h3>Cibersecurity</h3>
 								<p>Knowledge of protection against cyber attacks.</p>
 							</section>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
-								<i class='fas fa-satellite-dish fa-2x'> NETWORKS </i><br/>
-								<h3>Network protocols</h3>
-								<p>Knowledge of network configurations.<br><br></p>
+								<i class='fas fa-solid fa-code fa-2x'></i>
+								<h3>PROGRAMMING</h3>
+								<p>Page design and solutions.</p><p></p>
 							</section>
 						</div>
 					</div>
@@ -107,8 +106,8 @@
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
-								<h3><a>Accompaniment</a></h3>
-								<p>Technical and face-to-face support for project completion.<br><br></p>
+								<h3><a>Development</a></h3>
+								<p>Development and design of solutions.<br><br></p>
 							</article>
 						</div>
 						<div class="col-4 col-7-medium col-12-small">
