--- a/index.html
+++ b/index.html
@@ -25,12 +25,16 @@
 						<div class="col-4 col-5-large col-12-medium">
 							<span class="image fit"><img src="images/PERFIL.png" alt="" /></span>
 						</div>
-						<div class="col-8 col-7-large col-12-medium">
+							<div class="col-8 col-7-large col-12-medium">
 							<header>
-								<h1>Hi, welcome to my website. <br><br><br><strong> IT Specialist. </strong><h1>Kevin Oliver Camacho Paz.</h1>
-							</header>
-							<p>This is my <strong>respository</strong>, here you can find everything related to my work curriculum such as my <a href="https://drive.google.com/uc?id=1QpQPHV-iwTz_AsHkoAp1noTq4ChFibD6&export=download">CV</a> mis <a href="https://www.linkedin.com/in/kevin-oliver-camacho-paz/">certifications</a> &amp; my contacts.</a>.</p>
-							<a href="#work" class="button large scrolly">Learn about what I do</a>
+								<element class="Expertise">
+								<h1 >Hi, welcome to my website <br><br><br><strong><span class="typed"></h1></strong><h1>Kevin Oliver Camacho Paz.</h1>
+								
+								<p>This is my <strong>respository</strong>, here you can find everything related to my work curriculum such as my <a href="https://drive.google.com/uc?id=1QpQPHV-iwTz_AsHkoAp1noTq4ChFibD6&export=download">CV</a> mis <a href="https://www.linkedin.com/in/kevin-oliver-camacho-paz/">certifications</a> &amp; my contacts.</a>.</p>
+								<a href="#work" class="button large scrolly">Learn about what I do</a>
+								</element>
+							</header></span>
+							</div>
 						</div>
 					</div>
 				</div>
@@ -83,21 +87,21 @@
 					<div class="row">
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+								<a href="#" class='fas fa-solid fa-laptop fa-2x'></i></a>
 								<h3><a>Webinars</a></h3>
 								<p>Presentations of IT solutions.<br><p>
 							</article>
 						</div>
 						<div class="col-4 col-7-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
+								<a href="#" class='fas fa-solid fa-dumbbell fa-2x'></i></a>
 								<h3><a>Trainings</a></h3>
 								<p>Individual IT solutions sessions.<br><br></p>
 							</article>
 						</div>
 						<div class="col-4 col-7-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
+								<a href="#" class='fas fa-solid fa-user-tie fa-2x'></i></a>
 								<h3><a>Project management</a></h3>
 								<p>Survey of requirements and development.</p>
 								
@@ -105,21 +109,21 @@
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
+								<a href="#" class='fas fa-solid fa-laptop-code fa-2x'></i></a>
 								<h3><a>Development</a></h3>
 								<p>Development and design of solutions.<br><br></p>
 							</article>
 						</div>
 						<div class="col-4 col-7-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
+								<a href="#" class='fas fa-solid fa-flask fa-2x'></i></a>
 								<h3><a>Creation of laboratories</a></h3>
 								<p>Laboratories elaborations for explanations and training.</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
+								<a href="#" class='fas fa-solid fa-users fa-2x'></i></a>
 								<h3><a>Consultancy</a></h3>
 								<p>Resolution and clarification of IT issues.<br><br></p>
 							</article>
@@ -197,14 +201,17 @@
 			</article>
 
 		<!-- Scripts -->
-			<div class="snackbars" id="form-output-global"></div>
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
-    		<script src="js/core.min.js"></script>
-    		<script src="js/script.js"></script>
+			<script src="js/core.min.js"></script>
+			<script src="js/script.js"></script>
+			<script src="js/jstype.js"></script>
+			<script> 
+				var typed = new Typed(".typed", {
+    			strings: ["IT Specilist", "Programmer", "Agile methodologies"],
+				typeSpeed: 50,
+				backSpeed: 50,
+				loop: true
+				})
+			</script>
+
 	</body>
 </html>
