--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
 							<div class="col-8 col-7-large col-12-medium">
 							<header>
 								<element class="Expertise">
-								<h1 >Hi, welcome to my website <br><br><strong><span class="typed"></h1></strong><h1>Kevin Oliver Camacho Paz.</h1>
-								
+								<h1 >Hi, welcome to my website <br><br><br><strong><span class="typed"></h1></strong><h1>Kevin Oliver Camacho Paz.</h1>
 								<p>This is my <strong>respository</strong>, here you can find everything related to my work curriculum such as my <a href="https://drive.google.com/uc?id=1QpQPHV-iwTz_AsHkoAp1noTq4ChFibD6&export=download">CV</a> mis <a href="https://www.linkedin.com/in/kevin-oliver-camacho-paz/">certifications</a> &amp; my contacts.</a>.</p>
 								<a href="#work" class="button large scrolly">Learn about what I do</a>
 								</element>
@@ -204,14 +203,18 @@
 			<script src="js/core.min.js"></script>
 			<script src="js/script.js"></script>
 			<script src="js/jstype.js"></script>
+			<div class="snackbars" id="form-output-global"></div>
+			<script src="assets/js/browser.min.js"></script>
+			<script src="assets/js/breakpoints.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<script src="assets/js/main.js"></script>
 			<script> 
 				var typed = new Typed(".typed", {
-    			strings: ["IT Specialist", "Programmer", "Agile methodologies"],
+    			strings: ["IT Specilist", "Programmer", "Agile methodologies"],
 				typeSpeed: 50,
 				backSpeed: 50,
 				loop: true
 				})
 			</script>
-
 	</body>
 </html>
